# script_formatter

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
python_code_archived/: dialogue_to_red.py  version.txt
python_coded/: 剧本格式化工具.spec
src/: formatter.rs  main.rs
