[package]
name = "script_formatter"
version = "1.1.1"
edition = "2024"

[dependencies]
docx-rs = "0.4.15"
rfd = "0.16.0"       # Rust File Dialog
anyhow = "1.0.75"    # Simplify error handling
lazy-regex = "3.4.2" # Compile-time regex checking

[build-dependencies]
winres = "0.1.0" # Windows API bindings

[[bin]]
name = "小牛马-剧本格式化工具"
path = "src/main.rs"
